Worked a little bit on task 2

--- a/Labbar/Labb1/covid_final.ipynb
+++ b/Labbar/Labb1/covid_final.ipynb
@@ -262,6 +262,206 @@
     "# Show the plot\n",
     "plt.show()"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Uppgift 2 - uppvärmning vaccindata\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 56,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Index(['KnKod', 'KnNamn', 'Antal_dos1', 'Antal_dos2', 'Andel_dos1',\n",
+       "       'Andel_dos2'],\n",
+       "      dtype='object')"
+      ]
+     },
+     "execution_count": 56,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "vaccine_data = pd.read_excel(\"data/Folkhalsomyndigheten_Covid19_Vaccine.xlsx\")\n",
+    "vaccine_kommun = pd.read_excel(\"data/Folkhalsomyndigheten_Covid19_Vaccine.xlsx\", sheet_name=\"Vaccinerade kommun\")\n",
+    "vaccine_sex = pd.read_excel(\"data/Folkhalsomyndigheten_Covid19_Vaccine.xlsx\", sheet_name=\"Vaccinerade kön\")\n",
+    "                            \n",
+    "vaccine_data.columns\n",
+    "\n",
+    "vaccine_kommun.columns\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### a) Hur många län finns representerade i datasetet?\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 43,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Amount of regions in dataset: 21\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "array(['| Sverige |', 'Stockholm', 'Uppsala', 'Södermanland',\n",
+       "       'Östergötland', 'Jönköping', 'Kronoberg', 'Kalmar', 'Gotland',\n",
+       "       'Blekinge', 'Skåne', 'Halland', 'Västra Götaland', 'Värmland',\n",
+       "       'Örebro', 'Västmanland', 'Dalarna', 'Gävleborg', 'Västernorrland',\n",
+       "       'Jämtland', 'Västerbotten', 'Norrbotten'], dtype=object)"
+      ]
+     },
+     "execution_count": 43,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "regions = len(vaccine_data[\"Region\"].unique())\n",
+    "\n",
+    "print(f\"Amount of regions in dataset: {regions-1}\") # -1 since the I Sverige I doesn't count as a region\n",
+    "\n",
+    "vaccine_data[\"Region\"].unique()\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### b) Hur många kommuner finns representerade i datasetet?"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 50,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Antal kommuner i blad 'Vaccinerade kommun': 290\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(f\"Antal kommuner i blad 'Vaccinerade kommun': {len(vaccine_kommun[\"KnNamn\"].unique())}\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### c) Hur stor är befolkningen som är representerad i datasetet?"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 71,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Totalt är det 7810380 människor i datasetet\n"
+     ]
+    }
+   ],
+   "source": [
+    "#Kollar på Vaccinerade kön och går till \"Kön > Totalt > Vaccinationstatus minst 1 dos\"\n",
+    "\n",
+    "vaccine_sex.query(\"Vaccinationsstatus == 'Minst 1 dos'\")\n",
+    "\n",
+    "tot_vaccine = vaccine_sex[\"Antal vaccinerade\"].head(1) \n",
+    "print(f\"Totalt är det {tot_vaccine[0]} människor i datasetet\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### d) Beräkna hur många barn under 18 år det finns i Sverige baserat på det här datasetet. Du får leta upp statistik på hur stor totala befolkningen är i Sverige.\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 79,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Det kanske är 2711176 personer\n",
+      "9188682.352941176\n",
+      "Det kanske är 1332874 personer\n"
+     ]
+    }
+   ],
+   "source": [
+    "#Ifrån google 2022 var folkmängden i Sverige 10 521 556. Antalet kvinnor var 5 223 232 och män 5 298 324\n",
+    "population_2022 = 10521556\n",
+    "under_18 =  population_2022-tot_vaccine[0]\n",
+    "print(f\"Det kanske är {under_18} personer\")\n",
+    "\n",
+    "#Kom precis på att datamägden bara representerade 85% av alla människor som vaccinerat sig vilket motsvarar 17/20 så vi får ta och räkna ut det\n",
+    "\n",
+    "estimated_population = tot_vaccine[0] / 0.85\n",
+    "print(estimated_population)\n",
+    "under_18 = population_2022-estimated_population\n",
+    "\n",
+    "print(f\"Det kanske är {int(under_18.round())} personer\")\n",
+    "\n",
+    "#Kollade på hur många som föddes mellan 2003-2022 och det var runt 100-110 tusen per år och så då är befolkningsmängden under 18 2022 runt 1 460 000 miljoner"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### e) Rita ett diagram som visar på åldersfördelningen av Sveriges befolkning.\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Börja här imorgon (2023-11-14)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### f) Rita stapeldiagram för andel med minst 1 dos per län, andel två doser per län och andel tre doser per län\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### g) Tag Västra Götalands län och Stockholms län och rita diagram över andelen vaccinerade med minst 1 dos, två doser, tre doser och fyra doser"
+   ]
   }
  ],
  "metadata": {
